좋아요, 북마크 기능 생성 태그 기능 추가 검색 기능 분리 인기순, 평점순 나열 기능 생성 설정 섹션 삭제 및 로그아웃 버튼 추가