@@ -2,54 +2,57 @@ package com.example.boardpjt.controller;
 
 import com.example.boardpjt.model.dto.PostDTO;
 import com.example.boardpjt.model.entity.Post;
-import com.example.boardpjt.model.entity.UserAccount;
+import com.example.boardpjt.model.entity.PostTag;
+import com.example.boardpjt.service.BookmarkService;
 import com.example.boardpjt.service.FileStorageService;
 import com.example.boardpjt.service.FollowService;
 import com.example.boardpjt.service.PostService;
-import com.example.boardpjt.service.UserAccountService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.util.StringUtils;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
 import java.io.IOException;
+import java.util.stream.Collectors;
 
 @Controller
 @RequiredArgsConstructor
 @RequestMapping("/posts")
+@Slf4j
 public class PostController {
 
     private final PostService postService;
-    private final UserAccountService userAccountService;
     private final FileStorageService fileStorageService;
     private final FollowService followService;
+    private final BookmarkService bookmarkService;
 
     @GetMapping
     public String list(Model model,
                       @RequestParam(defaultValue = "1") int page,
                       @RequestParam(required = false) String keyword,
-                      @RequestParam(required = false) String category) {
+                      @RequestParam(required = false) String category,
+                      @RequestParam(defaultValue = "titleContent") String searchType,
+                      @RequestParam(defaultValue = "latest") String sort) {
         keyword = (keyword == null) ? "" : keyword;
-        Page<Post> postPage = postService.findWithPagingAndSearchAndCategory(keyword, category, page - 1);
+        Page<Post> postPage = postService.findWithPagingAndSearchAndCategory(keyword, category, searchType, sort, page - 1);
         model.addAttribute("currentPage", page);
         model.addAttribute("totalPages", postPage.getTotalPages());
         model.addAttribute("posts",
-                // [수정] DTO 변환 시 category, rating, tags 추가
-                postPage.getContent().stream().map(p -> new PostDTO.Response(
-                        p.getId(), p.getTitle(), p.getContent(),
-                        p.getAuthor().getUsername(), p.getCreatedAt(), p.getImageUrl(),
-                        p.getCategory(), p.getRating(), p.getTags()
-                )).toList()
+                postPage.getContent().stream()
+                        .map(post -> PostDTO.Response.from(post, postService.getLikeCount(post)))
+                        .collect(Collectors.toList())
         );
         model.addAttribute("keyword", keyword);
         model.addAttribute("selectedCategory", category != null ? category : "");
+        model.addAttribute("searchType", searchType);
+        model.addAttribute("sort", sort);
         return "post/list";
     }
 
@@ -64,13 +67,14 @@ public class PostController {
         }
 
         try {
-            String savedFileName = fileStorageService.uploadFile(file);
-            dto.setImageUrl(savedFileName);
-            dto.setUsername(authentication.getName());
-            postService.createPost(dto);
+            if (file != null && !file.isEmpty()) {
+                String savedFileName = fileStorageService.uploadFile(file);
+                dto.setImageUrl(savedFileName);
+            }
+            postService.createPost(dto, authentication.getName());
 
         } catch (IOException | IllegalArgumentException e) {
-            e.printStackTrace();
+            log.error("File upload failed", e);
             redirectAttributes.addFlashAttribute("error", "파일 업로드에 실패했습니다: " + e.getMessage());
             return "redirect:/posts/new";
         }
@@ -92,18 +96,15 @@ public class PostController {
         }
 
         try {
-            // 파일이 새로 첨부된 경우에만 업로드 및 URL 변경
             if (file != null && !file.isEmpty()) {
                 String savedFileName = fileStorageService.uploadFile(file);
                 dto.setImageUrl(savedFileName);
             }
+            postService.updatePost(id, dto, authentication.getName());
 
-            dto.setUsername(authentication.getName());
-            postService.updatePost(id, dto);
-
-        } catch (IOException | IllegalArgumentException e) {
-            e.printStackTrace();
-            redirectAttributes.addFlashAttribute("error", "파일 수정에 실패했습니다: " + e.getMessage());
+        } catch (IOException | IllegalArgumentException | SecurityException e) {
+            log.error("Post update failed", e);
+            redirectAttributes.addFlashAttribute("error", "게시글 수정에 실패했습니다: " + e.getMessage());
             return "redirect:/posts/" + id + "/edit";
         }
 
@@ -115,13 +116,22 @@ public class PostController {
         Post post = postService.findById(id);
         model.addAttribute("post", post);
 
-        // 팔로우 여부 체크
+        long likeCount = postService.getLikeCount(post);
+        model.addAttribute("likeCount", likeCount);
+
+        boolean isBookmarked = false;
+        boolean isLiked = false;
         if (authentication != null) {
-            boolean isFollowing = followService.isFollowing(authentication.getName(), post.getAuthor().getId());
+            String username = authentication.getName();
+            isBookmarked = bookmarkService.isBookmarked(id, username);
+            isLiked = postService.isLiked(id, username);
+            boolean isFollowing = followService.isFollowing(username, post.getAuthor().getId());
             model.addAttribute("followCheck", isFollowing);
         } else {
             model.addAttribute("followCheck", false);
         }
+        model.addAttribute("isBookmarked", isBookmarked);
+        model.addAttribute("isLiked", isLiked);
 
         return "post/detail";
     }
@@ -138,20 +148,24 @@ public class PostController {
         PostDTO.Request dto = new PostDTO.Request();
         dto.setTitle(post.getTitle());
         dto.setContent(post.getContent());
-        // [추가] 기존 카테고리, 평점, 태그 값 로드
         dto.setCategory(post.getCategory());
         dto.setRating(post.getRating());
-        dto.setTags(post.getTags());
+        dto.setTags(post.getPostTags().stream().map(PostTag::getTagName).collect(Collectors.toList()));
         model.addAttribute("post", dto);
         model.addAttribute("postId", id);
-        // [추가] 기존 이미지 URL도 전달 (수정 폼에서 미리보기용)
         model.addAttribute("existingImageUrl", post.getImageUrl());
         return "post/edit";
     }
 
     @PostMapping("/{id}/delete")
-    public String delete(@PathVariable Long id) {
-        postService.deleteById(id);
+    public String delete(@PathVariable Long id, Authentication authentication, RedirectAttributes redirectAttributes) {
+        try {
+            postService.deleteById(id, authentication.getName());
+        } catch (SecurityException e) {
+            log.warn("Post delete permission denied", e);
+            redirectAttributes.addFlashAttribute("error", "게시글을 삭제할 권한이 없습니다.");
+            return "redirect:/posts/" + id;
+        }
         return "redirect:/posts";
     }
 }
